attempt of fix for scrolling bug on iOS

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -134,6 +134,13 @@ body.beta #map {
     overflow-y: auto;
 }
 
+// iOS Fix
+// source: https://github.com/twbs/bootstrap/issues/14839
+.modal {
+    -webkit-overflow-scrolling: auto !important;
+    overflow-y: auto !important;
+}
+
 #locationQueryBtn {
     display: none;
 }
